--- a/ui-complex-test-framework/pom.xml
+++ b/ui-complex-test-framework/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>h2</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.40.0</version>
+        </dependency>
     </dependencies>
 
     <profiles>
