--- a/ui-complex-test-framework/pom.xml
+++ b/ui-complex-test-framework/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>io.cyborgcode.roa</groupId>
         <artifactId>roa-parent</artifactId>
-        <version>1.0.0-rc-2</version>
+        <version>1.0.0-rc-1</version>
     </parent>
 
     <groupId>io.cyborgcode.roa.usage</groupId>
@@ -96,7 +96,7 @@
         </profile>
     </profiles>
 
-    <!--<dependencyManagement>
+    <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
@@ -106,20 +106,6 @@
                 <scope>import</scope>
             </dependency>
         </dependencies>
-    </dependencyManagement>-->
-
-    <repositories>
-        <repository>
-            <id>github-roa-libraries</id>
-            <name>GitHub Packages for Roa Libraries</name>
-            <url>https://maven.pkg.github.com/CyborgCodeSyndicate/roa-libraries</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
+    </dependencyManagement>
 
 </project>
